# Tutoraggio-ISW-IADA-2025-2026

./: .gitignore  README.md
lezioni/0-Introduzione/: README.md
lezioni/1-OOP/: oop.ipynb
lezioni/2-UML/: README.md
lezioni/3-Git/: README.md
lezioni/4-BestPractices/: README.md
lezioni/4-Optimization/: data_analytics.ipynb  hyperparameter_optimization.ipynb  optimization.ipynb  parallelism.ipynb  test_multiprocessing.py
lezioni/5-TestingPublishing/: README.md
lezioni/5-TestingPublishing/progetto_esempio/: pyproject.toml
